// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";


package connection.protobuf;

message StationIdentifier {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING spacecraftID = 1;
  optional ccsds_mal.protobuf.STRING stationID = 2;
}
